Fixed spacing between navigation sections for sidebar + applied Material Design colour palette

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 html {
     /* DEFAULT LIGHT COLORS */
     /* DARK MODE COLORS */
-    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, sans-serif, Arial;
+    font-family: Roboto, "Helvetica Neue", Helvetica, sans-serif, Arial;
     font-size: 18px;
 }
 
@@ -36,19 +36,18 @@ body {
     row-gap: 35px;
     padding: 25px 50px;
     height: 150px;
-    box-shadow: 0.1em 0.2em 0.3em rgba(0,0,0,0.2);
 }
 
 .header-top {
     display: grid;
     grid-template-columns: 1fr auto;
-    column-gap: 60px;
+    column-gap: 120px;
 }
 
 .header-top-right {
     display: flex;
     align-items: center;
-    column-gap: 15px;
+    column-gap: 18px;
 }
 
 .header-bottom {
@@ -109,12 +108,12 @@ body {
 }
 
 .header-bottom-left button {
-    background-color: hsl(0, 0%, 94%);
+    background-color: #ff7043;
     border: none;
     border-radius: 45px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-    color: black;
+    color: white;
     font-size: 0.8rem;
     font-weight: 500;
     text-transform: uppercase;
@@ -125,11 +124,11 @@ body {
 }
 
 .header-bottom-left button:hover {
-    background-color: hsl(0, 0%, 90%);
+    background-color: hsl(14, 79%, 43%);
 }
 
 .header-bottom-left button:active {
-  background-color: hsl(0, 0%, 88%);
+  background-color: hsl(14, 79%, 38%);
   transform: translateY(1px);
 }
 
@@ -200,11 +199,11 @@ input:checked + .slider {
 .sidebar {
     grid-column: 1;
     grid-row: 1 / -1;
-    background-color: skyblue;
+    background-color: #5c6bc0;
     color: white;
     display: grid;
-    grid-template-rows: 50px auto auto;
-    grid-row-gap: 50px;
+    grid-template-rows: 50px auto 1fr;
+    grid-row-gap: 60px;
     padding: 30px;
 }
 
@@ -217,10 +216,11 @@ input:checked + .slider {
 
 .side-nav {
     display: grid;
+    align-self: start;
     grid-template-rows: repeat(auto-fit, 40px);
-    row-gap: 15px;
-    font-size: 1.2rem;
-    font-weight: 500;
+    row-gap: 25px;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 .side-nav img {
@@ -239,15 +239,15 @@ input:checked + .slider {
 .main-content {
     grid-column: 2 / -1;
     grid-row: 2 / -1;
-    background-color: rgb(255, 255, 255);
+    box-shadow: inset 0.1em 0.3em 0.5em rgba(0,0,0,0.2);
     display: grid;
     grid-template-columns: 2fr 1fr;
-    margin-top: 10px;
+    padding-top: 0.4em;
 }
 
 /* PROJECT CARDS */
 .projects {
-    background-color: white;
+    background-color: #f0f0f0;
     display: grid;
     grid-template-rows: 50px 1fr;
     row-gap: 10px;
@@ -255,7 +255,7 @@ input:checked + .slider {
 }
 
 .cards {
-    background-color: white;
+    background-color: f0f0f0;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-auto-rows: 320px;
@@ -264,7 +264,7 @@ input:checked + .slider {
 
 .card {
     background-color: white;
-    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.40), inset 8px 0px 0px rgba(255, 115, 0, 0.4);
+    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.40), inset 8px 0px 0px #ffa270;
     border-radius: 8px;
     padding: 30px 30px;
 }
@@ -289,6 +289,14 @@ input:checked + .slider {
     column-gap: 10px; 
 }
 
+.project-icon-links:hover {
+    -o-transform:rotate(720deg);
+    -ms-transform:rotate(720deg);
+    -moz-transform:rotate(720deg);
+    -webkit-transform:rotate(720deg);
+    transform:rotate(720deg);
+}
+
 #admin-dashboard-icon {
     margin-right: auto;
     margin-left: auto;
@@ -298,7 +306,7 @@ input:checked + .slider {
 
 /* WIDGETS */
 .widgets {
-    background-color: white;
+    background-color: #f0f0f0;
     grid-column: 2;
     grid-row: 
     display: grid;
